--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
 
         <activity android:name=".activities.LoginActivity" />
+        <activity android:name=".activities.LoginNarrowActivity"/>
 
     </application>
 
