--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.BiweeklyArticle" />
-        <activity android:name=".activities.NewsFeedActivity" />
         <activity android:name=".activities.IEEECouncilActivity" />
-        <activity android:name=".activities.NotificationActivity"></activity>
+        <activity android:name=".activities.NotificationActivity" />
+        <activity
+            android:name=".activities.MemberOnly"
+            android:label="@string/title_activity_member_only"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".PrivateActivity.SIGNotification"></activity>
     </application>
 
-
 </manifest>
-
