--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+//        debug{
+//            multiDexEnabled true
+//        }
     }
 }
 
@@ -26,7 +29,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.+'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     compile 'com.google.firebase:firebase-core:10.0.1'
@@ -36,7 +39,7 @@ dependencies {
     compile 'com.google.firebase:firebase-config:10.0.1'
     compile 'com.google.firebase:firebase-crash:10.0.1'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
-    compile 'com.firebaseui:firebase-ui-auth:2.1.0'
+    compile 'com.firebaseui:firebase-ui-auth:1.1.1'
     testCompile 'junit:junit:4.12'
 }
 
