--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ allprojects {
     repositories {
         jcenter()
         maven{
-            url 'https://maven.google.com'
+            url 'https://maven.fabric.io/public'
         }
     }
 }
