--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,8 @@
         <activity android:name=".MakingPosts.MakePosts" />
         <activity android:name=".MakingPosts.IEEECouncilPost" />
         <activity android:name=".MakingPosts.MakeMember" />
-        <activity android:name=".MakingPosts.NotificationPosting"></activity>
+        <activity android:name=".MakingPosts.NotificationPosting" />
+        <activity android:name=".activities.LargePublicNotification"></activity>
     </application>
 
 </manifest>
