--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.Achivements"
+            android:name=".activities.AchievementActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activities.IEEECouncilActivity"
@@ -54,7 +54,9 @@
         <activity android:name=".MakingPosts.IEEECouncilPost" />
         <activity android:name=".MakingPosts.MakeMember" />
         <activity android:name=".MakingPosts.NotificationPosting" />
-        <activity android:name=".activities.LargePublicNotification"></activity>
+        <activity android:name=".activities.LargePublicNotification" />
+        <activity android:name=".MakingPosts.PostAchievement" />
+        <activity android:name=".activities.LargeAchievement"></activity>
     </application>
 
 </manifest>
